--- a/forgot_password.html
+++ b/forgot_password.html
@@ -18,13 +18,13 @@
 body {
   /* background: #007bff; */
   /* background: linear-gradient(to right, #0062E6, #33AEFF); */
-  background-image: url('images/bg.jpg');
+  background-image: url('images/hero3.jpg');
 }
 
 .card-img-left {
   width: 45%;
   /* Link to your background image using in the property below! */
-  background: scroll center url('images/bg.jpg');
+  background: scroll center url('images/hero3.jpg');
   background-size: cover;
 }
 
@@ -32,6 +32,9 @@ body {
   font-size: 0.9rem;
   letter-spacing: 0.05rem;
   padding: 0.75rem 1rem;
+  background-color: #ffc107;
+  border: none;
+  color: white;
 }
 
 .btn-google {
@@ -42,6 +45,16 @@ body {
 .btn-facebook {
   color: white !important;
   background-color: #3b5998;
+}
+
+a{
+    color: black;
+}
+.back{
+  background-color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
 }
     </style>
 </head>
@@ -54,7 +67,7 @@ body {
               <!-- Background image for card set in CSS! -->
             </div>
             <div class="card-body p-4 p-sm-5">
-              <button onclick="goBack()"><img width="30" height="30" src="https://img.icons8.com/windows/32/circled-left.png" alt="circled-left"/></button>
+              <button onclick="goBack()" class="back"><img width="30" height="30" src="https://img.icons8.com/windows/32/circled-left.png" alt="circled-left"/></button>
               <h5 class="card-title text-center mb-5 fw-light fs-5">Forgot Password</h5>
               <form method="POST" action="" name="forgot_password" id="forgot_password_form" enctype="multipart/form-data">
 
@@ -70,7 +83,7 @@ body {
                 </div>
   
                 <div class="d-grid mb-2">
-                  <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" name="reset_pass" id="reset_pass" type="submit">Reset Password</button>
+                  <button class="btn btn-lg btn-login fw-bold text-uppercase" name="reset_pass" id="reset_pass" type="submit">Reset Password</button>
                 </div>
   
                 <a class="d-block text-center mt-2 small" href="login.php">Have an account? Sign In</a>
